vest-dsl/test/bad/duplicate_defn.vest
foo = {
  f1: u8,
  f2: [u8; 10],
}

foo = [u8; 8]
